better ci ... finding some values have wider ranges than expected

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,5 @@ jobs:
       uses: borales/actions-yarn@v4
       with:
         cmd: install # will run `yarn install` command
-    - run: yarn test
+    - run: yarn test:unit
+    - run: yarn test:scenario
